--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "jsonwebtoken": "^9.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.10.0",
-    "multiformats": "^11.0.2"
+    "multiformats": "^11.0.2",
+    "nodemailer": "^6.9.2"
   },
   "devDependencies": {
     "@tsed/cli-plugin-eslint": "4.4.2",
@@ -71,6 +72,7 @@
     "@types/method-override": "^0.0.32",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.14.1",
+    "@types/nodemailer": "^6.4.8",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "eslint": "^8.34.0",
